<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="305dp"
                android:layout_height="261dp"
                android:gravity="center"
                android:src="@mipmap/ic_launcher"
                app:srcCompat="@drawable/ic_lemon_slice"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_us_acercade"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/autores"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:src="@mipmap/ic_launcher"
                        app:srcCompat="@drawable/ic_girl"></ImageView>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="59dp"
                        android:src="@mipmap/ic_launcher"
                        app:srcCompat="@drawable/ic_man"></ImageView>

                    <ImageView
                        android:layout_width="159dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/ic_launcher"
                        app:srcCompat="@drawable/ic_man"></ImageView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/autor1"
                        android:textAlignment="center"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contacto: i1820380@continental.edu.pe"
                        android:textAlignment="center"></TextView>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/autor2"
                        android:textAlignment="center"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contacto: i1820380@continental.edu.pe"
                        android:textAlignment="center"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/autor3"
                        android:textAlignment="center"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contacto: i1820380@continental.edu.pe"
                        android:textAlignment="center"></TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>



